# OpenTruck

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260511_0001_initial_schema.py  20260512_0002_oauth_upstream_accounts.py  20260512_0003_upstream_account_scheduling.py  20260512_0004_gateway_usage_ledger.py  20260515_0005_wallet_and_support.py  20260515_0006_wallet_catalog.py  20260515_0007_support_ticket_messages.py  20260515_0008_announcements.py  README.md
backend/app/: main.py
backend/app/api/: deps.py  utils.py
backend/app/api/routes/: admin_announcements.py  admin_api_keys.py  admin_dashboard.py  admin_logs.py  admin_merchant_dashboard.py  gateway.py  (+12 more)
backend/app/core/: errors.py  settings.py
backend/app/db/: session.py
backend/app/models/: __init__.py  announcement.py  api_key.py  common.py  gateway_usage_ledger.py  node.py  node_model.py  oauth_session.py  payment_channel.py  payment_order.py  payment_plan.py  support_ticket.py  support_ticket_message.py  tenant.py  upstream_account.py  wallet_ledger.py
backend/app/schemas/: __init__.py  announcement.py  api_key.py  common.py  dashboard.py  error.py  jwt.py  logs.py  merchant_dashboard.py  node.py  node_model.py  openai_oauth.py  pagination.py  payment_catalog.py  public_leaderboard.py  support_ticket.py  tenant.py  upstream_account.py  wallet.py
backend/app/services/: gateway.py  openai_compat.py  openai_oauth.py  security.py
(+157 files in other folders)
