[tool.poetry]
name = "opentruck-backend"
version = "0.1.0"
description = "OpenTruck backend service"
readme = "README.md"
package-mode = false
authors = []

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = ">=0.30.0,<1.0.0"
pydantic-settings = ">=2.4.0,<3.0.0"
httpx = ">=0.27.0,<1.0.0"
sqlalchemy = ">=2.0.36,<3.0.0"
alembic = ">=1.14.0,<2.0.0"
psycopg = { version = ">=3.2.0,<4.0.0", extras = ["binary"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
